added a reset button

--- a/index.html
+++ b/index.html
@@ -6,28 +6,34 @@
 </head>
 
 <body>
+    <div class="calc-container">
+        <div id="display-container">
+            <p id="display"></p>
+        </div>
 
-    <div id="display-container">
-        <p id="display">1234 test</p>
-    </div>
+        <div id="button-container">
+            <button id="button-1" class="numeric">1</button>
+            <button id="button-2" class="numeric">2</button>
+            <button id="button-3" class="numeric">3</button>
+            <button id="button-4" class="numeric">4</button>
+            <button id="button-5" class="numeric">5</button>
+            <button id="button-6" class="numeric">6</button>
+            <button id="button-7" class="numeric">7</button>
+            <button id="button-8" class="numeric">8</button>
+            <button id="button-9" class="numeric">9</button>
+            <button id="plus" class="operator">+</button>
+            <button id="button-0" class="numeric">0</button>
+            <button id="minus" class="operator">-</button>
+            <button id="multiply" class="operator">*</button>
+            <button id="divide" class="operator">/</button>
+            <button id="equals" class="operator">=</button>
+        </div>
 
-    <div id="button-container">
-        <button id="1" class="numeric">1</button>
-        <button id="2" class="numeric">2</button>
-        <button id="3" class="numeric">3</button>
-        <button id="4" class="numeric">4</button>
-        <button id="5" class="numeric">5</button>
-        <button id="6" class="numeric">6</button>
-        <button id="7" class="numeric">7</button>
-        <button id="8" class="numeric">8</button>
-        <button id="9" class="numeric">9</button>
-        <button id="0" class="numeric">0</button>
-        <button id="plus" class="operator">+</button>
-        <button id="minus" class="operator">-</button>
-        <button id="multiply" class="operator">*</button>
-        <button id="divide" class="operator">/</button>
-        <button id="equals" class="operator">=</button>
+        <div class="clear">
+            <button id="clear-button">clear</button>
+        </div>
     </div>
+    <script src="script.js"></script>
 
 </body>
 
