--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button id="minus" class="operator">-</button>
             <button id="multiply" class="operator">*</button>
             <button id="divide" class="operator">/</button>
-            <button id="backspace-button">&lt;=</button>
+            <button id="backspace-button">&lt;--</button>
         </div>
 
         <div class="button-container" id="secondary">
