styled the calculator as well as added a background image to the page

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <button id="minus" class="operator">-</button>
             <button id="multiply" class="operator">*</button>
             <button id="divide" class="operator">/</button>
-            <button id="backspace-button">&lt;--</button>
+            <button id="backspace-button" class="operator">&lt;--</button>
         </div>
 
         <div class="button-container" id="secondary">
-            <button id="clear-button">clear</button>
+            <button id="clear-button" class="operator">clear</button>
             <button id="equals" class="operator">=</button>
         </div>
     </div>
