changed the calculator button layout and styled to make it look more realistic

--- a/index.html
+++ b/index.html
@@ -9,31 +9,35 @@
 <body>
     <div class="calc-container">
         <div id="display-container">
-            <p id="display"></p>
+            <h1 id="display"></h1>
         </div>
 
         <div class="button-container" id="main">
             <button id="button-1" class="numeric">1</button>
             <button id="button-2" class="numeric">2</button>
             <button id="button-3" class="numeric">3</button>
+            <button id="plus" class="operator">+</button>
+            <button id="minus" class="operator">-</button>
             <button id="button-4" class="numeric">4</button>
             <button id="button-5" class="numeric">5</button>
             <button id="button-6" class="numeric">6</button>
+            <button id="multiply" class="operator">*</button>
+            <button id="divide" class="operator">/</button>
             <button id="button-7" class="numeric">7</button>
             <button id="button-8" class="numeric">8</button>
             <button id="button-9" class="numeric">9</button>
-            <button id="plus" class="operator">+</button>
-            <button id="button-0" class="numeric">0</button>
-            <button id="minus" class="operator">-</button>
-            <button id="multiply" class="operator">*</button>
-            <button id="divide" class="operator">/</button>
+            <button id="decimal" class="operator">.</button>
             <button id="backspace-button" class="operator">&lt;--</button>
+            
         </div>
-
         <div class="button-container" id="secondary">
+            <button id="button-0" class="numeric">0</button>
             <button id="clear-button" class="operator">clear</button>
             <button id="equals" class="operator">=</button>
         </div>
+    </div>
+    <div class="credit">
+        <footer>Made by Christian Arneson</footer>
     </div>
     <script src="script.js"></script>
 
